--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.activities.MainActivity">
+
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#ffab00">
+    </android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize">
+        <TextView
+                android:id="@+id/tvNoneTask"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="Список задач пуст!" />
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvTaskList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".ui.activities.MainActivity">
+                android:scrollbars="vertical" />
 
-    <TextView
-            android:id="@+id/tvNoneTask"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="Список задач пуст!"
-    />
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvTaskList"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/addTask"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="17dp"
-            app:fabSize="normal"
-            android:clickable="true"
-            android:onClick="btAddTask"
-            app:backgroundTint="#009788"
-            app:borderWidth="0dp"
-            app:elevation="5dp"
-            android:src="@drawable/ic_add_black_24dp"
-            android:layout_alignParentRight="true"/>
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/deleteTask"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="17dp"
-            app:fabSize="normal"
-            android:clickable="true"
-            android:onClick="btDeleteTask"
-            app:backgroundTint="#B0002D"
-            app:borderWidth="0dp"
-            app:elevation="5dp"
-            android:visibility="invisible"
-            android:src="@drawable/ic_remove_black_24dp"
-            android:layout_alignParentRight="true"/>
-
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/addTask"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="17dp"
+                android:clickable="true"
+                android:onClick="btAddTask"
+                android:src="@drawable/ic_add_black_24dp"
+                app:backgroundTint="#ffab00"
+                app:borderWidth="0dp"
+                app:elevation="5dp"
+                app:fabSize="normal" />
+    </RelativeLayout>
 </RelativeLayout>
